[tool.poetry]
name = "DragonionServer"
version = "0.1.0"
description = ""
authors = ["BarsTiger <zxcbarstiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
dragonion-server = "DragonionServer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
