[tool.poetry]
name = "dragonion_server"
version = "0.1.0"
description = ""
authors = ["BarsTiger <zxcbarstiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
dragonion-server = "dragonion_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
