[tool.poetry]
name = "dragonion_server"
version = "0.1.0"
description = ""
authors = ["BarsTiger <zxcbarstiger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stem = "^1.8.2"
psutil = "^5.9.5"
pynacl = "^1.5.0"
requests = "^2.31.0"
sqlitedict = "^2.1.0"
fastapi = "^0.99.0"
uvicorn = "^0.22.0"
rich = "^13.4.2"
click = "^8.1.3"
attrs = "^23.1.0"
dataclasses-json = "^0.5.9"
websockets = "^11.0.3"

[tool.poetry.scripts]
dragonion-server = "dragonion_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
